--- a/Projects/Lab 1/Lab 1/Base.lproj/Main.storyboard
+++ b/Projects/Lab 1/Lab 1/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,50 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Jerry Webb" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i0q-Hq-ei4">
+                                <rect key="frame" x="20" y="20" width="560" height="71"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="71" id="VjF-G5-VfO"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="ChalkboardSE-Light" family="Chalkboard SE" pointSize="30"/>
+                                <color key="textColor" white="0.25" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <color key="highlightedColor" white="0.75" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="profilePic" translatesAutoresizingMaskIntoConstraints="NO" id="WbU-zO-z9a">
+                                <rect key="frame" x="20" y="99" width="560" height="199"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="UeP-xW-HFt"/>
+                                    <constraint firstAttribute="height" constant="199" id="i6U-FT-FxQ"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="7" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="yKq-qN-Vbz">
+                                <rect key="frame" x="20" y="306" width="560" height="274"/>
+                                <string key="text">I am majoring in Computer Engineering. I really enjoyed learning to program for Android, and I am interested in also learning iOS so that I can develope for both platforms. I also recently switched from Android to Apple, and I want to also create apps for my new phone.</string>
+                                <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="24"/>
+                                <color key="textColor" white="0.25" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.91714743589743586" green="0.68952216346408823" blue="0.017081737658204078" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="i0q-Hq-ei4" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="0CA-JL-Sgx"/>
+                            <constraint firstItem="WbU-zO-z9a" firstAttribute="centerX" secondItem="yKq-qN-Vbz" secondAttribute="centerX" id="Fj7-Ex-bkk"/>
+                            <constraint firstItem="i0q-Hq-ei4" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="LCk-XL-lkD"/>
+                            <constraint firstAttribute="bottom" secondItem="yKq-qN-Vbz" secondAttribute="bottom" constant="20" symbolic="YES" id="Oet-0B-tSy"/>
+                            <constraint firstItem="i0q-Hq-ei4" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="RcE-7g-wkl"/>
+                            <constraint firstItem="yKq-qN-Vbz" firstAttribute="top" secondItem="WbU-zO-z9a" secondAttribute="bottom" constant="8" symbolic="YES" id="dYB-g0-gQ6"/>
+                            <constraint firstItem="WbU-zO-z9a" firstAttribute="top" secondItem="i0q-Hq-ei4" secondAttribute="bottom" constant="8" symbolic="YES" id="ki5-lP-qkp"/>
+                            <constraint firstItem="WbU-zO-z9a" firstAttribute="centerX" secondItem="i0q-Hq-ei4" secondAttribute="centerX" id="ymO-9F-36u"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="305" y="356"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="profilePic" width="301" height="301"/>
+    </resources>
 </document>
