--- a/Projects/Lab2/Lab2/Base.lproj/Main.storyboard
+++ b/Projects/Lab2/Lab2/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -47,17 +47,19 @@
                                     <action selector="dismissKeyboard:" destination="BYZ-38-t0r" eventType="editingDidEndOnExit" id="Pas-tA-X6N"/>
                                 </connections>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HtX-8m-fwc" userLabel="PirateButton">
+                            <button alpha="0.80000000000000004" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HtX-8m-fwc" userLabel="PirateButton">
                                 <rect key="frame" x="20" y="132" width="276" height="224"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.41386217948717952" green="0.41386217948717952" blue="0.41386217948717952" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="tintColor" red="0.91714743590000003" green="0.68952216349999995" blue="0.017081737659999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" image="pirate"/>
                                 <connections>
                                     <action selector="pirateButtonTouched:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wWs-3Z-3nb"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8D8-Ff-PLm" userLabel="NinjaButton">
+                            <button alpha="0.80000000000000004" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8D8-Ff-PLm" userLabel="NinjaButton">
                                 <rect key="frame" x="304" y="132" width="276" height="224"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.41386217948717952" green="0.41386217948717952" blue="0.41386217948717952" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="tintColor" red="0.91714743590000003" green="0.68952216349999995" blue="0.017081737659999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" image="ninja"/>
                                 <connections>
                                     <action selector="ninjaButtonTouched:" destination="BYZ-38-t0r" eventType="touchUpInside" id="erB-Qz-zwh"/>
