--- a/Projects/_Lab 5/lab 4/lab 4/Base.lproj/Main.storyboard
+++ b/Projects/_Lab 5/lab 4/lab 4/Base.lproj/Main.storyboard
@@ -45,6 +45,9 @@
                                 <rect key="frame" x="20" y="550" width="560" height="30"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="dismissKeyboard:" destination="x0q-rm-90q" eventType="editingDidEndOnExit" id="urg-xP-Qs2"/>
+                                </connections>
                             </textField>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="xAV-rY-y6f" userLabel="QuestionTextView">
                                 <rect key="frame" x="20" y="170" width="560" height="372"/>
@@ -141,7 +144,7 @@
         <!--Table View Controller-->
         <scene sceneID="4ET-zB-sHs">
             <objects>
-                <tableViewController id="mvO-59-DBd" sceneMemberID="viewController">
+                <tableViewController id="mvO-59-DBd" customClass="TableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="5f5-NF-hRV">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -173,7 +176,8 @@
                     <navigationItem key="navigationItem" id="dv8-BW-Waa">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="Axn-oz-1r6">
                             <connections>
-                                <segue destination="x0q-rm-90q" kind="modal" id="iFX-kt-q0I"/>
+                                <action selector="addQuote:" destination="mvO-59-DBd" id="T5I-Du-7I1"/>
+                                <segue destination="x0q-rm-90q" kind="presentation" identifier="addSegue" id="iFX-kt-q0I"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
