--- a/Projects/Lab 6/Lab 6/Base.lproj/Main.storyboard
+++ b/Projects/Lab 6/Lab 6/Base.lproj/Main.storyboard
@@ -6,91 +6,110 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
-            <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="921" y="-144"/>
-        </scene>
-        <!--Place-->
+        <!--Los Angeles Tourist-->
         <scene sceneID="eZH-4X-d9T">
             <objects>
-                <collectionViewController id="cur-bz-LXl" userLabel="Place" customClass="PlaceCollectionViewController" sceneMemberID="viewController">
+                <collectionViewController id="cur-bz-LXl" customClass="PlaceCollectionViewController" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="GT3-ni-zFO">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.50196081400000003" green="0.50196081400000003" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Jrm-nB-bjP">
-                            <size key="itemSize" width="146" height="176"/>
-                            <size key="headerReferenceSize" width="50" height="14"/>
+                            <size key="itemSize" width="180" height="205"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PlaceItemCell" id="ero-IX-jBB" userLabel="PlaceItemCell" customClass="PlaceItemCollectionViewCell">
-                                <rect key="frame" x="0.0" y="78" width="146" height="176"/>
+                                <rect key="frame" x="0.0" y="64" width="180" height="205"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="146" height="176"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="180" height="205"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fVE-wJ-Pll">
+                                            <rect key="frame" x="8" y="8" width="164" height="132"/>
+                                        </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lf1-iP-C8w">
-                                            <rect key="frame" x="8" y="112" width="130" height="56"/>
+                                            <rect key="frame" x="8" y="138" width="164" height="59"/>
                                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="19"/>
                                             <color key="textColor" red="1" green="0.97051746179999998" blue="0.98831991809999997" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fVE-wJ-Pll">
-                                            <rect key="frame" x="8" y="8" width="130" height="96"/>
-                                        </imageView>
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstItem="lf1-iP-C8w" firstAttribute="trailing" secondItem="ero-IX-jBB" secondAttribute="trailingMargin" id="EUr-Bv-XvE"/>
-                                    <constraint firstItem="lf1-iP-C8w" firstAttribute="bottom" secondItem="ero-IX-jBB" secondAttribute="bottomMargin" id="Mcn-wE-via"/>
-                                    <constraint firstItem="lf1-iP-C8w" firstAttribute="top" secondItem="fVE-wJ-Pll" secondAttribute="bottom" constant="8" id="TJ5-x3-wnu"/>
-                                    <constraint firstItem="lf1-iP-C8w" firstAttribute="leading" secondItem="ero-IX-jBB" secondAttribute="leadingMargin" id="VaI-Gn-8tZ"/>
-                                    <constraint firstItem="fVE-wJ-Pll" firstAttribute="leading" secondItem="ero-IX-jBB" secondAttribute="leadingMargin" id="aQi-wu-8pr"/>
-                                    <constraint firstItem="fVE-wJ-Pll" firstAttribute="top" secondItem="ero-IX-jBB" secondAttribute="topMargin" id="bpy-sB-Q7A"/>
-                                    <constraint firstItem="fVE-wJ-Pll" firstAttribute="trailing" secondItem="ero-IX-jBB" secondAttribute="trailingMargin" id="uSr-Os-VwO"/>
+                                    <constraint firstItem="lf1-iP-C8w" firstAttribute="bottom" secondItem="ero-IX-jBB" secondAttribute="bottomMargin" id="2OC-eN-kuu"/>
+                                    <constraint firstItem="lf1-iP-C8w" firstAttribute="top" secondItem="fVE-wJ-Pll" secondAttribute="bottom" constant="4" id="6Yw-NI-tfx"/>
+                                    <constraint firstItem="lf1-iP-C8w" firstAttribute="trailing" secondItem="ero-IX-jBB" secondAttribute="trailingMargin" id="RbP-rr-e0Q"/>
+                                    <constraint firstItem="fVE-wJ-Pll" firstAttribute="top" secondItem="ero-IX-jBB" secondAttribute="topMargin" id="baW-uG-3PR"/>
+                                    <constraint firstItem="fVE-wJ-Pll" firstAttribute="trailing" secondItem="ero-IX-jBB" secondAttribute="trailingMargin" id="ccg-Mj-MaC"/>
+                                    <constraint firstItem="lf1-iP-C8w" firstAttribute="leading" secondItem="ero-IX-jBB" secondAttribute="leadingMargin" id="gxn-UZ-Yjy"/>
+                                    <constraint firstItem="fVE-wJ-Pll" firstAttribute="leading" secondItem="ero-IX-jBB" secondAttribute="leadingMargin" id="jJQ-QB-6h4"/>
                                 </constraints>
                                 <connections>
                                     <outlet property="imageView" destination="fVE-wJ-Pll" id="FI5-ph-BBf"/>
                                     <outlet property="placeLabel" destination="lf1-iP-C8w" id="3ha-wn-iV5"/>
+                                    <segue destination="KRh-w9-5Up" kind="show" identifier="webView" id="zyb-bF-vmK"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
-                        <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="kEG-TX-9a7">
-                            <rect key="frame" x="0.0" y="64" width="600" height="14"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        </collectionReusableView>
                         <connections>
                             <outlet property="dataSource" destination="cur-bz-LXl" id="N9J-lh-CIl"/>
                             <outlet property="delegate" destination="cur-bz-LXl" id="SUy-xH-ifQ"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" id="ynZ-fe-a4B"/>
+                    <navigationItem key="navigationItem" title="Los Angeles Tourist" id="ynZ-fe-a4B"/>
                     <connections>
-                        <outlet property="placeLabel" destination="lf1-iP-C8w" id="4Fe-zG-6cQ"/>
+                        <outlet property="navItem" destination="ynZ-fe-a4B" id="GIe-Ic-eCR"/>
                     </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8kT-XV-e9v" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1733" y="550"/>
+        </scene>
+        <!--DetailViewController-->
+        <scene sceneID="h4C-71-2Hb">
+            <objects>
+                <viewController id="KRh-w9-5Up" userLabel="DetailViewController" customClass="DetailViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="AIu-ln-2K6"/>
+                        <viewControllerLayoutGuide type="bottom" id="dEU-vO-O71"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="JiK-66-ZuN">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O9t-zK-Erj">
+                                <rect key="frame" x="20" y="72" width="560" height="508"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
+                                <connections>
+                                    <outlet property="delegate" destination="JiK-66-ZuN" id="feM-ff-n2U"/>
+                                </connections>
+                            </webView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="BV1-Ku-OFx">
+                                <rect key="frame" x="290" y="290" width="20" height="20"/>
+                            </activityIndicatorView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="O9t-zK-Erj" firstAttribute="top" secondItem="AIu-ln-2K6" secondAttribute="bottom" constant="8" id="TGM-Lb-b0F"/>
+                            <constraint firstItem="O9t-zK-Erj" firstAttribute="leading" secondItem="JiK-66-ZuN" secondAttribute="leadingMargin" id="Y8f-9w-nEc"/>
+                            <constraint firstItem="O9t-zK-Erj" firstAttribute="trailing" secondItem="JiK-66-ZuN" secondAttribute="trailingMargin" id="arn-Mo-2qd"/>
+                            <constraint firstItem="dEU-vO-O71" firstAttribute="top" secondItem="O9t-zK-Erj" secondAttribute="bottom" constant="20" id="hGN-he-g1w"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="activityViewIndicator" destination="BV1-Ku-OFx" id="esq-Hx-u6M"/>
+                        <outlet property="webView" destination="O9t-zK-Erj" id="Tl3-5a-baS"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZRC-L6-J3H" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1727" y="1326"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="HIl-cR-RMo">
